# burn

./: Cargo.toml  log.txt
backend-comparison/src/burnbenchapp/: auth.rs
backend-comparison/src/persistence/: base.rs
crates/burn/: Cargo.toml
crates/burn-autodiff/: Cargo.toml
crates/burn-autodiff/src/tests/: abs.rs  adaptive_avgpool1d.rs  adaptive_avgpool2d.rs  add.rs  aggregation.rs  avgpool1d.rs  avgpool2d.rs  backward.rs  bridge.rs  broadcast.rs  cat.rs  checkpoint.rs  complex.rs  conv1d.rs  conv2d.rs  conv_transpose1d.rs  conv_transpose2d.rs  cos.rs  cross_entropy.rs  div.rs  erf.rs  exp.rs  expand.rs  flip.rs  gather_scatter.rs  gelu.rs  gradients.rs  log.rs  log1p.rs  log_sigmoid.rs  mask.rs  matmul.rs  maxmin.rs  maxpool1d.rs  maxpool2d.rs  memory_management.rs  mul.rs  multithread.rs  nearest_interpolate.rs  neg.rs  (+18 more)
crates/burn-candle/: Cargo.toml
crates/burn-common/: Cargo.toml
crates/burn-common/src/: benchmark.rs  id.rs  lib.rs  primitive.rs
crates/burn-common/src/primitive/: impl_f16.rs
crates/burn-compute/: Cargo.toml
crates/burn-compute/src/memory_management/: simple.rs
crates/burn-compute/src/storage/: bytes_cpu.rs
crates/burn-compute/src/tune/: tune_cache.rs  tuner.rs
crates/burn-compute/tests/: integration_test.rs
crates/burn-core/: Cargo.toml
crates/burn-core/src/grad_clipping/: base.rs
crates/burn-core/src/lr_scheduler/: cosine.rs  exponential.rs  linear.rs  noam.rs
crates/burn-core/src/nn/: dropout.rs  embedding.rs  initializer.rs  linear.rs  (+4 more)
crates/burn-core/tests/: derive_config.rs  derive_module.rs  record_resilience.rs
crates/burn-cuda/: Cargo.toml
crates/burn-dataset/: Cargo.toml
crates/burn-fusion/: Cargo.toml
crates/burn-import/: Cargo.toml
crates/burn-import/src/: logger.rs
crates/burn-jit/: Cargo.toml
crates/burn-jit/src/: element.rs
crates/burn-ndarray/: Cargo.toml
crates/burn-ndarray/src/: tensor.rs
crates/burn-no-std-tests/tests/: integration_test.rs
crates/burn-tch/src/: tensor.rs
crates/burn-tensor/: Cargo.toml
crates/burn-train/: Cargo.toml
crates/burn-wgpu/: Cargo.toml
crates/burn-wgpu/src/: lib.rs  runtime.rs
examples/custom-renderer/: Cargo.toml
examples/custom-training-loop/: Cargo.toml
examples/custom-wgpu-kernel/: Cargo.toml
examples/guide/: Cargo.toml
examples/image-classification-web/: Cargo.toml
examples/image-classification-web/src/: web.rs
examples/mnist/: Cargo.toml
examples/simple-regression/: Cargo.toml
examples/text-generation/: Cargo.toml
xtask/: Cargo.toml
xtask/src/: books.rs  dependencies.rs  logging.rs  main.rs  runchecks.rs  vulnerabilities.rs
(+299 files in other folders)
