[package]
name = "xtask"
version = "0.5.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.83"
clap = { version = "4.5.4", features = ["derive"] }
derive_more = { version = "0.99.17", features = [
    "display",
], default-features = false }
tracing = { workspace = true, features = ["std"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
rand = { workspace = true, features = ["std"] }
serde_json = { version = "1" }

[dev-dependencies]
rstest = { workspace = true }
tracing-test = { workspace = true }
