[package]
authors = ["Dilshod Tadjibaev (@antimora)"]
categories = []
description = "Common crate for the Burn framework"
edition.workspace = true
keywords = []
license.workspace = true
name = "burn-common"
readme.workspace = true
repository = "https://github.com/tracel-ai/burn/tree/main/crates/burn-common"
version.workspace = true

[features]
default = ["std"]
std = ["rand/std", "tracing/std"]
doc = ["default"]
wasm-sync = []
network = ["dep:indicatif", "dep:reqwest", "dep:tokio"]

nightly = []
nightly-f16 = ["nightly"]

[target.'cfg(target_family = "wasm")'.dependencies]
async-trait = { workspace = true }
getrandom = { workspace = true, features = ["js"] }
web-time = { version = "1.1.0" }


[dependencies]
# ** Please make sure all dependencies support no_std when std is disabled **

rand = { workspace = true }
spin = { workspace = true }       # using in place of use std::sync::Mutex;          
uuid = { workspace = true }
derive-new = { workspace = true }
serde = { workspace = true }

half = { workspace = true }

# Network downloader
indicatif = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }

tracing = { workspace = true }

[dev-dependencies]
dashmap = { workspace = true }
tracing-test = { workspace = true }

[package.metadata.docs.rs]
features = ["doc"]
