[package]
authors = ["nathanielsimard <nathaniel.simard.42@gmail.com>"]
edition.workspace = true
license.workspace = true
name = "guide"
publish = false
version.workspace = true

[features]
default = ["burn/default"]

[dependencies]
burn = { path = "../../crates/burn", features = ["wgpu", "train", "vision"] }

# Serialization
tracing = { workspace = true }
serde = { workspace = true, features = ["std", "derive"] }
